# yuki

./: .envrc  .gitignore  Cargo.toml  Makefile  README.md  devenv.nix  flake.nix
src/: main.rs
src/commands/: doctor.rs  install.rs  list.rs  mod.rs  search.rs  uninstall.rs  update.rs
src/config/: config.rs  mod.rs
