[package]
name = "yuki"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
shellexpand = "3.1"
dirs = "5.0"
which = "7.0"
execute = "0.2"
tempfile = "3.8"
thiserror = "1.0"
colored = "2.0"
nix-editor = "0.3.0"
skim = "*"
spinners = "4.1.1"
term_size = "0.3"
